--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.10.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0"
   },
