--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0"
   },
