--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -14,13 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.1",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0"
